feat: Add OpenShift deployment configuration and UI improvements

--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - rbac.yaml
   - backend-deployment.yaml
   - ui-deployment.yaml
+  - docling-deployment.yaml
   - route.yaml
   - buildconfig.yaml
 
